--- a/SistemaDePuntos/nbproject/project.properties
+++ b/SistemaDePuntos/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sistemadepuntos.SistemaDePuntos
+main.class=docs.SistemaDePuntos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
